# fdk-mcp

./: .dir-locals.el  .gitignore  CHANGELOG.md  CONTRIBUTORS.md  DEVELOPMENT.md  README.md  context.py  fdk-mcp.code-workspace  json_fdk_context.py  main.py  mcp_file.py  prompts.md  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml  server.py  test_server.py
data/sample/: OBJ_BR_1_Brücke-Gesamtobjekt.json  OBJ_EN_193_Unterwerk.json  OBJ_FB_1_Gleisrost.json  OBJ_HB_015_Wand.json
docs/: example.json
specs/: FDK_API_MCP_Documentation.md  README.md  models.py  services.py
specs/_done_/: ARCHITECTURE_MIGRATION_COMPLETED.md  CLEAN_ARCHITECTURE_TESTS.md  TEST_SUITE_SUMMARY.md
specs/_in_progress_/: cache_communication_improvements.md  fdk_tool_improvements.md
specs/_todo_/: action_items.md
src/fdk_mcp/: __init__.py  __main__.py  constants.py  data_provider.py  models.py  server.py
src/fdk_mcp/adapters/: __init__.py
src/fdk_mcp/domain/: __init__.py
src/fdk_mcp/infrastructure/: __init__.py
src/fdk_mcp/plugins/: __init__.py
src/fdk_mcp/plugins/sbb/: __init__.py  (+4 more)
src/fdk_mcp/use_cases/: __init__.py  advanced_search.py  download_catalog.py  get_cache_coverage.py  get_object.py  group_objects.py  list_domains.py  list_objects.py  search_properties.py  update_cache.py
tests/: README.md  conftest.py  test_data_provider.py  test_models.py  test_server.py
tests/fixtures/: sample_api_responses.json
tests/unit/: test_models.py
tests/unit/adapters/: test_presenters.py
tests/unit/domain/: test_catalog_object.py  test_property_set.py  test_release_info.py
(+27 files in other folders)
