[project]
name = "fdk-mcp"
version = "0.1.0"
description = "MCP Server for FDK (Fach-Daten-Katalog) API integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0"
]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "ruff>=0.12.5",
]
